Changelog for plone.app.form

    (name of developer listed in brackets)

plone.app.form - 1.2.0 (unreleased)

    - Specified package dependencies.
      [hannosch]

    - Corrected the NamedTemplateAdapter to work with the modified
      ViewPageTemplateFile in Zope 2.12.
      [davisagli]

plone.app.form - 1.1.6 (unreleased)

    - Made a test less dependent on the exact HTML output, so it works across
      Zope versions with slightly different newline ending semantics.
      [hannosch]

    - Only include KSS subpackage if kss.core is available.
      [hannosch]

    - Fixed KSS payload tests to omit a trailing newline.
      [hannosch]

    - Use structure for errors again, this seems to have been lost in the merge
      of r19540.
      [elro]

plone.app.form - 1.1.5 Released August 18th, 2008

    - Add a MultiCheckBoxWidget that uses <label>s to be accessible.
      [csenger]

    - Forced the input values of the datecomponents into integers before doing
      calculations with them. This closes
      http://dev.plone.org/plone/ticket/6737.
      [hannosch]

    - Synchronized the default value behavior of all fields in the datetime
      widget. This closes http://dev.plone.org/plone/ticket/6988.
      [hannosch]

plone.app.form - 1.1.0 Released April 20th, 2008

    - Changed the patch warning to debug level. This is nothing the end users
      have to see.
      [hannosch]

plone.app.form - 1.1.0a1

    - Improve KSS inline validation for complex widgets like the 
      UberSelectionwidget that require more than a single form value to
      validate.
      [optilude]

    - PLIP202: add support for KSS validation and inline editing for formlib
      forms
      [optilude]

plone.app.form - 1.0.5

    - For the USW:
      Made description of search result and current selection items
      consistent, always include the current selection fieldset (hidden if
      empty) and added CSS classes to the current selection and search result
      fieldsets.